<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/geoWelcome" />

    <TextView
        android:id="@+id/instructionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geoLatLong" />

    <EditText
        android:id="@+id/latitudeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/geoLat"
        android:inputType="text" />

    <EditText
        android:id="@+id/longitudeField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/geoLong"
        android:inputType="text" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geoSearch" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/showFavoritesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geoFav" />

</LinearLayout>