<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuSoccer"
        android:title="@string/menuSoccer"
        android:icon="@drawable/barca"
        android:orderInCategory="100"
        app:showAsAction="always"/>


    <item android:id="@+id/menuSong"
        android:orderInCategory="50"
        android:icon="@drawable/tape"
        app:showAsAction="always"
        android:title="@string/menuGeo"/>

    <item android:id="@+id/menuDeezer"
        android:orderInCategory="50"
        android:icon="@drawable/man"
        app:showAsAction="always"
        android:title="@string/menuDeezer"/>

    <item android:id="@+id/menuAbout"
        android:title="@string/geoAbout"
        app:showAsAction="never"
        android:orderInCategory="400"/>

</menu>