<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout
    android:id="@+id/fragmentLayout"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="576dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/duration"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/albumName"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:text="@string/albumName"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/albumCover"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:tooltipText="AlbumCover" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveAlbumDetails" />

    </LinearLayout>

    </FrameLayout>

